@@ -90,7 +90,7 @@ ZG_mul(GEN x, GEN y)
   return z;
 }
 GEN
-ZGC_add_sparse(GEN x, GEN y)
+ZGCs_add(GEN x, GEN y)
 {
   GEN xi = gel(x,1), xv = gel(x,2);
   GEN yi = gel(y,1), yv = gel(y,2);
@@ -107,26 +107,6 @@ ZGC_add_sparse(GEN x, GEN y)
   for(; j < ly; j++,k++) { zi[k] = yi[j]; gel(zv,k) = gel(yv,j); }
   setlg(zi,k);
   setlg(zv,k); return mkvec2(zi, zv);
-}
-GEN
-ZGM_add_sparse(GEN x, GEN y)
-{
-  long j, l;
-  GEN z = cgetg_copy(x, &l);
-  for (j = 1; j < l; j++) gel(z,j) = ZGC_add_sparse(gel(x,j), gel(y,j));
-  return z;
-}
-void
-ZGC_add_inplace(GEN x, GEN y)
-{
-  long i, l = lg(x);
-  for (i = 1; i < l; i++) gel(x,i) = ZG_add(gel(x,i), gel(y,i));
-}
-void
-ZGM_add_inplace(GEN x, GEN y)
-{
-  long j, l = lg(x);
-  for (j = 1; j < l; j++) ZGC_add_inplace(gel(x,j), gel(y,j));
 }
 GEN
 ZG_G_mul(GEN x, GEN y)
